# DjangoTaskManager

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  bad_db.sqlite3  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: linter-check.yml
labels/: admin.py  apps.py  bad_tests_.py  forms.py  models.py  tables.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_labels_created_at.py  0003_alter_labels_created_at.py  0004_alter_labels_created_at_alter_labels_name.py  0005_alter_labels_created_at_alter_labels_name.py
labels/templates/: labels.html  labels_statuses.html
statuses/: forms.py  models.py  tables.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_created_at.py  0004_alter_status_created_at_alter_status_name.py
statuses/templates/: statuses.html
task_manager/: constants.py  mixin.py  settings.py  urls.py  views.py
task_manager/templates/: _general_pattern.html  base.html  general_pattern_.html  index.html
tasks/: admin.py  filter.py  forms.py  models.py  tables.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tasks/templates/: task_view.html  tasks.html
tests/: test_labels.py  test_login.py  test_statuses.py  test_tasks.py  test_users.py
users/: forms.py  models.py  tables.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0003_alter_user_first_name_alter_user_last_name.py  0004_alter_user_first_name_alter_user_last_name_.py  0005_remove_user_user_name.py
users/templates/: create.html  delete.html  general_pattern.html  login.html  (+3 more)
(+4 files in other folders)
